[package]
name = "pallet-payment-streams"
description = "FRAME pallet that allows for the creation and management of payment streams."
version = "0.3.4"
homepage = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true }

# Local
pallet-payment-streams-runtime-api = { workspace = true }
pallet-proofs-dealer = { workspace = true, optional = true }
pallet-storage-providers = { workspace = true, optional = true }
shp-constants = { workspace = true }
shp-traits = { workspace = true }
shp-treasury-funding = { workspace = true }

# Substrate
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }

sp-runtime = { workspace = true }
sp-weights = { workspace = true }

[dev-dependencies]
serde = { workspace = true }

# Local
shp-constants = { workspace = true }
shp-file-metadata = { workspace = true }

# Substrate
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-trie = { workspace = true }

# Frame
pallet-balances = { workspace = true, features = ["std"] }
pallet-nfts = { workspace = true }

[features]
default = ["std"]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-proofs-dealer/runtime-benchmarks",
	"pallet-storage-providers/runtime-benchmarks",
	"shp-constants/runtime-benchmarks",
	"shp-file-metadata/runtime-benchmarks",
	"shp-traits/runtime-benchmarks",
	"shp-treasury-funding/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"pallet-nfts/std",
	"pallet-payment-streams-runtime-api/std",
	"pallet-proofs-dealer/std",
	"pallet-storage-providers/std",
	"scale-info/std",
	"shp-traits/std",
	"shp-treasury-funding/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-weights/std",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"shp-traits/try-runtime",
	"shp-treasury-funding/try-runtime",
	"sp-runtime/try-runtime",
]
